# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-ci.yml
gendiff/: diff_builder.py  parser.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
hexlet_code.egg-info/: PKG-INFO  top_level.txt
tests/: test_gendiff.py
